# diesel-test

./: .gitignore  README.md  spec.yaml
backend/: .env  Cargo.toml
backend/migrations/2022-11-27-224015_create_tracks/: down.sql  up.sql
backend/src/: lib.rs  main.rs  schema.rs
backend/src/actions/: get_song_by_name.rs  get_songs.rs  get_songs_by_artist.rs  mod.rs  write_song.rs
backend/src/db/: lib.rs  mod.rs  models.rs
