[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10.0"
diesel = { version = "2.0.0", features = ["sqlite", "chrono", "r2d2"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
scanf = "*"
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
